syntax = "proto3";

package pc;
import "mem.proto";
import "processor.proto";
import  "storage.proto";
import  "screen.proto";
import  "keyboard.proto";
import "google/protobuf/timestamp.proto";

message Laptop{
  string id=1;
  string brand=2;
  string name=3;
  CPU cpu=4;
  Memory ram=5;
  repeated GPU gpus=6;
  repeated Storage storage=7;
  Screen screen=8;
  Keyboard keyboard=9;
  oneof weight{
    double weight_kg=10;
    double weight_lb=11;
  }
  double price_usd=12;
  uint32 release_year=13;
  google.protobuf.Timestamp updated_at=14;

}
