syntax = "proto3";

package pc;
import "mem.proto";
message CPU {
  string brand=1;
  string name=2;
  uint32 number_cores=3;
  uint32 number_threads=4;
  double  min_ghz=5;
  double  max_ghz=6;
}
message GPU {
  string brand=1;
  string name=2;
  double  min_ghz=5;
  double  max_ghz=6;
  Memory memory=7;
}